--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Add To Cart - Furniture</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
   </head>
@@ -15,7 +16,9 @@
       <div class = "container">
         <!-- navbar -->
         <nav class = "navbar">
-          <a href = "index.html" class = "navbar-brand">LOGO AND NAME</a>
+          <div class="logo">  
+             <i class="fa-solid fa-couch" style="font-size:35px; color: #626a6a;"></i></div>
+          <a href = "index.html" class = "navbar-brand">Mebelland</a>
           <div class = "cart">
             <button type = "button" id = "cart-btn">
               <i class = "fas fa-shopping-cart"></i>
