--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class = "banner">
           <div class = "banner-content">
             <h1>Furniture For Your Home</h1>
-            <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos eveniet, quis nisi recusandae assumenda ea sequi obcaecati accusantium in provident dolore debitis autem neque vel commodi atque voluptates incidunt aliquam delectus veritatis? Exercitationem, fugit sed!</p>
+            <span class="text">Classic meet modern living, Mebelland has a fantastic range of indoor furniture, perfect for any modern home.</span>
             <div class = "btns">
               <button type = "button" class = "btn">know more</button>
               <button type = "button" class = "btn">more info</button>
@@ -99,7 +99,7 @@
       <div class = "footer-banner">
         <div class = "container">
           <h2>Unlimited Furniture Collection</h2>
-          <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores est quod maxime nisi possimus corporis qui aliquid molestias sit iusto itaque, cum delectus tempore, distinctio velit. Repellat reiciendis suscipit quidem aliquid ipsam, nemo minus repudiandae quas eligendi natus voluptate nostrum?</p>
+          <p class = "text">You can also order furniture without visiting the store. All you have to do is go to Mebelland.az, select the furniture you want and pay. Mebelland provides delivery and installation of furniture. This service is provided free of charge.</p>
           <button type = "button" class = "btn">View More</button>
         </div>
       </div>
